--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-light fixed-top">
-  <div class="container">
-    <a class="navbar-brand">Quiz Website</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container-fluid px-5 p-1">
+    <a class="navbar-brand" href="#"></a>
     <button
       class="navbar-toggler"
       type="button"
@@ -13,33 +13,50 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
+      <ul class="navbar-nav ms-md-auto gap-2">
+        <li class="nav-item px-2">
+          <a class="nav-link active"  href="#">
+            Home
+          </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+        <li class="nav-item px-2">
+          <a class="nav-link" href="#">
+            About
+          </a>
         </li>
-        <li class="nav-item me-3">
-          <a class="nav-link" href="#">Contact</a>
+        <li class="nav-item px-2">
+          <a class="nav-link" href="#">
+            Contact
+          </a>
         </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary me-3" routerLink="/updateUser"
-            >Update Profile</a
+        <li class="nav-item px-2">
+          <a class="nav-link active" routerLink="login">
+            Sign in
+          </a>
+        </li>
+        <li class="nav-item px-1">
+          <a class="nav-link active btn btn-secondary py-1 mt-1 px-3" routerLink="register">
+            Register
+          </a>
+        </li>
+        <li class="nav-item px-2 dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
           >
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary me-3" routerLink="/">Logout</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary me-3" routerLink="/register"
-            >Sign Up</a
+            <i class="bi bi-person-fill me-2"></i>Profile
+          </a>
+          <ul
+            class="dropdown-menu dropdown-menu-end"
+            aria-labelledby="navbarDropdown"
           >
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary me-3" routerLink="/login"
-            >Login</a
-          >
+            <li><a class="dropdown-item" routerLink="updateUser">Account</a></li>
+            <li><a class="dropdown-item" href="#">Logout</a></li>
+          </ul>
         </li>
       </ul>
     </div>
