--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid py-5">
   <div class="login-form card">
-    <div class="card-header py-4">
+    <div class="card-header bg-secondary py-3">
       <h2 class="form-title text-center">Login to Your Account</h2>
     </div>
     <div class="card-body px-4">
