--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,15 +1,17 @@
 <div class="container-fluid py-5">
   <div class="signup-form card">
     <div class="card-header bg-secondary py-3">
-      <h2 class="form-title text-center" style="font-weight: bold;">Sign Up for the Quiz</h2>
+      <h2 class="form-title text-center" style="font-weight: bold">
+        Sign Up for the Quiz
+      </h2>
     </div>
     <div class="card-body px-5">
       <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)">
         <!-- Profile Image Section -->
         <div class="text-center mb-4">
           <div class="profile-image-container">
-            <img 
-              [src]="cover || 'images/profile.png'" 
+            <img
+              [src]="cover || 'images/profile.png'"
               class="profile-image"
               alt="Profile Image"
             />
@@ -29,7 +31,7 @@
               />
             </div>
             @if (showError) {
-              <p class="text-danger mt-1">Profile image is required</p>
+            <p class="text-danger mt-1">Profile image is required</p>
             }
           </div>
         </div>
@@ -49,13 +51,13 @@
             minlength="2"
           />
           @if(firstName.touched && firstName.invalid) {
-            @if(firstName.errors?.['required']) {
-              <p class="text-danger">First name is required</p>
-            }
-            @if(firstName.errors?.['minlength']) {
-              <p class="text-danger">First name must be at least 2 characters long</p>
-            }
-          }
+          @if(firstName.errors?.['required']) {
+          <p class="text-danger">First name is required</p>
+          } @if(firstName.errors?.['minlength']) {
+          <p class="text-danger">
+            First name must be at least 2 characters long
+          </p>
+          } }
         </div>
 
         <!-- Last Name -->
@@ -73,13 +75,13 @@
             minlength="2"
           />
           @if(lastName.touched && lastName.invalid) {
-            @if(lastName.errors?.['required']) {
-              <p class="text-danger">Last name is required</p>
-            }
-            @if(lastName.errors?.['minlength']) {
-              <p class="text-danger">Last name must be at least 2 characters long</p>
-            }
-          }
+          @if(lastName.errors?.['required']) {
+          <p class="text-danger">Last name is required</p>
+          } @if(lastName.errors?.['minlength']) {
+          <p class="text-danger">
+            Last name must be at least 2 characters long
+          </p>
+          } }
         </div>
 
         <!-- Email Address -->
@@ -96,14 +98,12 @@
             required
             email
           />
-          @if(email.touched && email.invalid) {
-            @if(email.errors?.['required']) {
-              <p class="text-danger">Email is required</p>
-            }
-            @if(email.errors?.['email']) {
-              <p class="text-danger">Please enter a valid email address</p>
-            }
-          }
+          @if(email.touched && email.invalid) { @if(email.errors?.['required'])
+          {
+          <p class="text-danger">Email is required</p>
+          } @if(email.errors?.['email']) {
+          <p class="text-danger">Please enter a valid email address</p>
+          } }
         </div>
 
         <!-- Username -->
@@ -122,49 +122,63 @@
             maxlength="20"
           />
           @if(username.touched && username.invalid) {
-            @if(username.errors?.['required']) {
-              <p class="text-danger">Username is required</p>
-            }
-            @if(username.errors?.['minlength']) {
-              <p class="text-danger">Username must be at least 4 characters long</p>
-            }
-            @if(username.errors?.['maxlength']) {
-              <p class="text-danger">Username cannot exceed 20 characters</p>
-            }
-          }
+          @if(username.errors?.['required']) {
+          <p class="text-danger">Username is required</p>
+          } @if(username.errors?.['minlength']) {
+          <p class="text-danger">Username must be at least 4 characters long</p>
+          } @if(username.errors?.['maxlength']) {
+          <p class="text-danger">Username cannot exceed 20 characters</p>
+          } }
         </div>
 
         <!-- Password -->
         <div class="mb-3">
           <label for="password" class="form-label">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="password"
-            name="password"
-            #password="ngModel"
-            [(ngModel)]="userObj.password"
-            placeholder="Create a password"
-            required
-            minlength="8"
-            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
-          />
-          @if(password.touched && password.invalid) {
+          <div class="input-group">
+            <input
+              [type]="showPassword ? 'text' : 'password'"
+              class="form-control"
+              id="password"
+              name="password"
+              #password="ngModel"
+              [(ngModel)]="userObj.password"
+              placeholder="Create a password"
+              required
+              minlength="8"
+              pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
+            />
+            <button
+              class="btn btn-light"
+              type="button"
+              (click)="togglePasswordVisibility()"
+            >
+              <i
+                class="bi"
+                [class.bi-eye]="!showPassword"
+                [class.bi-eye-slash]="showPassword"
+              ></i>
+            </button>
+            @if(password.touched && password.invalid) {
             @if(password.errors?.['required']) {
-              <p class="text-danger">Password is required</p>
-            }
-            @if(password.errors?.['minlength']) {
-              <p class="text-danger">Password must be at least 8 characters long</p>
-            }
-            @if(password.errors?.['pattern']) {
-              <p class="text-danger">Password must include uppercase, lowercase, number, and special character</p>
-            }
-          }
+            <p class="text-danger">Password is required</p>
+            } @if(password.errors?.['minlength']) {
+            <p class="text-danger">
+              Password must be at least 8 characters long
+            </p>
+            } @if(password.errors?.['pattern']) {
+            <p class="text-danger">
+              Password must include uppercase, lowercase, number, and special
+              character
+            </p>
+            } }
+          </div>
         </div>
 
         <!-- Confirm Password -->
         <div class="mb-3">
-          <label for="confirmPassword" class="form-label">Confirm Password</label>
+          <label for="confirmPassword" class="form-label"
+            >Confirm Password</label
+          >
           <input
             type="password"
             class="form-control"
@@ -176,14 +190,14 @@
             required
           />
           @if(confirmPassword.touched && confirmPassword.invalid) {
-            <p class="text-danger">Passwords do not match</p>
+          <p class="text-danger">Passwords do not match</p>
           }
         </div>
 
         <!-- Submit Button -->
-        <button 
-          type="submit" 
-          class="btn btn-primary w-100" 
+        <button
+          type="submit"
+          class="btn btn-primary w-100"
           [disabled]="!registerForm.form.valid"
         >
           Sign Up
